--- a/MitaBase/.classpath
+++ b/MitaBase/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Mäx/Documents/workspace/craftbukkit-1.4.2-R0.3-20121103.060223-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
