Fixed colored chat (now only with permission)

--- a/MitaBase/plugin.yml
+++ b/MitaBase/plugin.yml
@@ -229,6 +229,7 @@ permissions:
             MitaBase.unjail: true
             MitaBase.warnings.list.others: true
             MitaBase.warnings.issue: true
+            MitaBase.coloredchat: true
     MitaBase.user.*:
         description: Gives access to all user-commands from MitaBase
         children:
